# Minimal-Raylib-2D-Template

./: .clang-format  BuildRaylib.cmake  CMakeLists.txt  MakeAppBundle.cmake  README.md
Source/: Main.c
